fixes description spacing

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-self: center;
     align-self: center;
-    background: linear-gradient( rgba(0,0,0,0.6), rgba(0,0,0, 0.3)), url(../../assets/dp_background.png)50% 50% no-repeat fixed;
+    background: linear-gradient( rgba(0,0,0,0.4), rgba(0,0,0, 0.3)), url(../../assets/dp_background.png)50% 50% no-repeat fixed;
     background-size: 99% 99%;
     width: 100%;
     height: 98vh;
